force-app/main/default/objects/FF_Asset__c/FF_Asset__c.object-meta.xml
<CustomObject>
    <label>FF Assets</label>
    <nameField>
        <label>FF Asset  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FF Assets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>