force-app/main/default/objects/FF_Asset__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Asset</label>
    <referenceTo>Assets__c</referenceTo>
    <relationshipLabel>FF Assets</relationshipLabel>
    <relationshipName>FF_Assets</relationshipName>
    <type>Lookup</type>
</CustomField>