force-app/main/default/objects/FF_Asset__c/fields/Deleted__c.field-meta.xml
<CustomField>
    <fullName>Deleted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deleted</label>
    <type>Checkbox</type>
</CustomField>