force-app/main/default/objects/FF_Asset__c/fields/FF_Session__c.field-meta.xml
<CustomField>
    <fullName>FF_Session__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FF session</label>
    <referenceTo>FF_Session__c</referenceTo>
    <relationshipLabel>FF Assets</relationshipLabel>
    <relationshipName>FF_Assets</relationshipName>
    <type>Lookup</type>
</CustomField>