force-app/main/default/objects/FF_Asset__c/fields/match_id__c.field-meta.xml
<CustomField>
    <fullName>match_id__c</fullName>
    <description>This is the ID to check what the latest record is with this match ID</description>
    <label>Match ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>