force-app/main/default/objects/FF_Asset__c/fields/OW_validation_type__c.field-meta.xml
<CustomField>
    <fullName>OW_validation_type__c</fullName>
    <description>Captures on the FF record whether a validation was automatic or manual so that we can assess how much time is being saved by automatic validations and so that we can tell how a change came to be validated.</description>
    <label>Validation type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>OW_validation_type</valueSetName>
    </valueSet>
</CustomField>