force-app/main/default/objects/FF_Asset__c/fields/Percentage_of_Ownership__c.field-meta.xml
<CustomField>
    <fullName>Percentage_of_Ownership__c</fullName>
    <label>Percentage of ownership</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>