force-app/main/default/objects/FF_Asset__c/fields/Primary_Owner__c.field-meta.xml
<CustomField>
    <fullName>Primary_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Owner</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>FF_Assets1</relationshipName>
    <type>Lookup</type>
</CustomField>