force-app/main/default/objects/FF_Asset__c/fields/Reason_for_Rejection__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Rejection__c</fullName>
    <label>Reason for rejection</label>
    <type>TextArea</type>
</CustomField>