force-app/main/default/objects/FF_Asset__c/fields/Related_Liability__c.field-meta.xml
<CustomField>
    <fullName>Related_Liability__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Related liability</label>
    <referenceTo>Liabilities__c</referenceTo>
    <relationshipLabel>FF Assets</relationshipLabel>
    <relationshipName>FF_Assets</relationshipName>
    <type>Lookup</type>
</CustomField>