force-app/main/default/objects/FF_Asset__c/fields/Rental_Income__c.field-meta.xml
<CustomField>
    <fullName>Rental_Income__c</fullName>
    <label>Rental income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>