force-app/main/default/objects/FF_Asset__c/fields/Rental_Income_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Rental_Income_Frequency__c</fullName>
    <defaultValue>(&quot;Annually&quot;)</defaultValue>
    <label>Rental income frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Frequency</valueSetName>
    </valueSet>
</CustomField>