force-app/main/default/objects/FF_Asset__c/fields/Retained_Earnings__c.field-meta.xml
<CustomField>
    <fullName>Retained_Earnings__c</fullName>
    <label>Retained Earnings</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>